k8s-man/ingress-controller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing
  namespace: default
spec:
  ingressClassName: external-app
  rules:
  - host: api.devopsbyexample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 3000
